[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aip-judgment-sidecar"
version = "0.1.0"
description = "Judgment/evidence layer for Agent Identity Protocol (AIP) based on HJS/JEP"
readme = "README.md"
authors = [
    {name = "Yuqiang Wang", email = "signal@humanjudgment.org"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "pydantic>=2.0",
    "cryptography>=41.0",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/hjs-spec/aip-judgment-sidecar"
Repository = "https://github.com/hjs-spec/aip-judgment-sidecar.git"
